--- a/style/summer.css
+++ b/style/summer.css
@@ -33,6 +33,10 @@
   background-size: cover;
 }
 
+.sp1-navMenu > li > a:hover {
+  color: #22d5ff !important;
+}
+
 .sp1-navMenu-su {
   position: relative;
   display: flex;
@@ -234,43 +238,98 @@
   border-radius: 10px;
 }
 
-.sp1-sec3-top {
+.sp1-sec3 {
+  border: none;
+}
+
+.sp1-sec3-api,
+.sp1-sec3-text {
+  width: 48%;
+  height: 100%;
+  border-radius: 1.6rem;
+  background-color: rgb(18, 42, 63);
+  color: #fff;
+}
+
+.sp1-sec3-text > span {
+  font-size: 1.6rem;
+  color: #fff;
+}
+
+.sp1-sec3-api {
+  color: #22d5ff;
+  background-color: rgb(18, 42, 63);
+  text-align: center;
+  height: 100%;
   display: flex;
-  width: 100%;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  padding: 1rem;
+}
+
+.sp1-sec3-api > div:nth-child(1) {
+  width: 100%;
+  text-align: center;
+  font-size: 2rem;
+  color: #fff;
+  font-weight: 600;
+}
+
+.sp1-sec3-api > div:nth-child(2) {
+  display: flex;
+  justify-content: space-around;
+}
+.sp1-sec3-api > div > div {
+  margin: 3% auto;
+  height: 20%;
+}
+
+.sp1-sec3-api span {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #fff;
 }
 
 .sp1-sec3-text {
   border: 1px solid black;
-}
-
-#su-sp1-sec3 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 600px;
-}
-
-.su-sp1-sec3-graph {
+  padding: 1rem;
+  font-size: 1.5rem;
   text-align: center;
   align-content: center;
+}
+
+.sp1-sec3-graph {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   font-size: 6rem;
-  border: 1px solid #000;
+  border: 1px solid #0f172a;
   border-radius: 10px;
+  width: 90%;
+  height: 55%;
+  margin-top: 5rem;
 }
 
-.su-graph {
-  width: 600px;
-  height: 500px;
+.sp1-sec3-graph > div:nth-child(1) {
+  width: 30%;
+  height: 10%;
+  text-align: center;
+  color: #0f172a;
+  font-size: 2rem;
+  font-weight: bolder;
+  align-content: center;
+}
+
+.sp1-sec3-graph > div:nth-child(2) {
+  width: 50%;
+  height: 95%;
   background-image: url("../img/summer/su-grap.png");
-  background-size: cover;
-  background-repeat: no-repeat;
   background-position: center;
-  border: 1px solid black;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
-
 .su-cody {
   color: rgb(20, 27, 51) !important;
   /* font-family: "Rosarivo", serif; */
@@ -647,6 +706,27 @@ body.no-scroll {
   background-size: cover;
 }
 
+.sub-hi {
+  display: none;
+}
+
+.sp2-subInf1,
+.sp2-subInf2,
+.sp2-subInf3,
+.sp2-subInf4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 2rem !important;
+  line-height: 25px !important;
+}
+
+.sp2-subInf-span {
+  font-size: 2.6rem;
+  margin-bottom: 10px;
+  color: #fff;
+}
+
 /*---------- 메뉴 및 모바일 메뉴 -----------------------*/
 
 /* jongmin sub-page ED*/
@@ -666,6 +746,10 @@ body.no-scroll {
     overflow-x: hidden;
   }
 
+  .sub-hi {
+    display: block;
+  }
+
   .mb-br-su {
     display: none;
   }
@@ -678,6 +762,22 @@ body.no-scroll {
     font-size: 2.4rem;
 
     /* color: #fff; */
+  }
+
+  .sp2-subInf1,
+  .sp2-subInf2,
+  .sp2-subInf3,
+  .sp2-subInf4 {
+    display: flex;
+    flex-direction: column;
+    font-size: 2rem !important;
+    line-height: 30px !important;
+  }
+
+  .sp2-subInf-span {
+    font-size: 2.6rem;
+    margin-bottom: 10px;
+    color: #fff;
   }
 
   .sp1-hamBar {
@@ -811,6 +911,19 @@ body.no-scroll {
     overflow: hidden;
   }
 
+  .sp1-sec3-graph {
+    margin-top: 100px;
+    width: 100%;
+    height: 100px;
+  }
+  .sp1-sec4-card-box {
+    border: none;
+  }
+
+  .sp1-sec3-graph {
+    display: none;
+  }
+
   .sp1-sec1-img-Box > li {
     width: 37rem;
     height: 30rem;
@@ -833,25 +946,6 @@ body.no-scroll {
     width: 100%;
     height: 500px;
     padding: 4rem;
-  }
-
-  .sp1-sec3 > div {
-    height: 50%;
-    margin-bottom: 5rem;
-  }
-
-  .sp1-sec3 > div:nth-child(1) {
-    width: 100%;
-    height: 50%;
-    border-radius: 1rem;
-  }
-
-  .su-sp1-sec3-graph {
-    text-align: center;
-    align-content: center;
-    font-size: 2rem;
-    border: 1px solid #000;
-    border-radius: 10px;
   }
 
   .sp-slide-left,
@@ -941,7 +1035,6 @@ body.no-scroll {
   position: relative;
   width: 50%;
   height: 100%;
-  border: 1px solid #fff;
   margin-right: 10px;
   background-image: url("../img/main/festival_su.jpg");
   background-size: cover;
@@ -953,7 +1046,6 @@ body.no-scroll {
   position: relative;
   width: 50%;
   height: 100%;
-  border: 1px solid #fff;
   margin-right: 10px;
   background-image: url("../img/summer/su-sub1-img1.png");
   background-size: cover;
@@ -968,5 +1060,596 @@ body.no-scroll {
     width: 100%;
   }
 }
+/* ----------------------------------------- */
+/* season-sub.css  */
+/* 관광지 섹션 스타일 */
+.sp2-section1 {
+  width: 100%;
+  height: 90%;
+  padding: 7rem 0;
+  background-color: #0f172a;
+  text-align: center;
+}
+
+/* 제목 */
+.sp2-subTit1 {
+  font-size: 2.6rem;
+  font-weight: 700;
+  color: #f8fafc;
+}
+
+/* 본문 */
+.sp2-mainBox1 {
+  width: 90%;
+  height: 70%;
+  position: relative;
+  margin: 10rem auto;
+  display: flex;
+}
+.sp2-subBox1,
+.sp2-subBox2,
+.sp2-subBox3,
+.sp2-subBox4 {
+  position: relative;
+  width: 24%;
+  height: 80%;
+  margin: 0 auto;
+}
+.sp2-subImg1,
+.sp2-subImg2,
+.sp2-subImg3,
+.sp2-subImg4 {
+  position: relative;
+  width: 100%;
+  height: 50%;
+  background-color: rgb(90, 77, 97);
+  border-radius: 2rem;
+  color: #fff;
+}
+
+.sp2-tr-design {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -8%;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 20px solid rgb(90, 77, 97); /* 삼각형 색상 */
+}
+
+.sp2-tr-design.on {
+  top: -8%;
+  transform: rotate(180deg);
+}
+
+.sp2-subImg1,
+.sp2-subImg3 {
+  margin-bottom: 20px;
+}
+
+.sp2-subImg2,
+.sp2-subImg4 {
+  margin-top: 20px;
+}
 
 /*  */
+
+.sp2-subInf1,
+.sp2-subInf2,
+.sp2-subInf3,
+.sp2-subInf4 {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  background-color: rgb(18, 43, 63);
+  font-size: 1.4rem;
+  text-align: start;
+  color: #22d5ff;
+  padding: 2rem;
+  line-height: 2rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+/* 제철음식 세션 스타일 */
+.sp2-section2 {
+  width: 100%;
+  height: 70%;
+  text-align: center;
+  margin-top: 7%;
+  margin-bottom: 6%;
+}
+
+/* 제목 */
+.sp2-subTit2 {
+  font-size: 2.6rem;
+  font-weight: 700;
+  color: rgb(18, 43, 63);
+}
+
+/* 본문 */
+.sp2-mainBox2 {
+  width: 90%;
+  height: 75%;
+  position: relative;
+  margin: 9rem auto;
+  display: flex;
+}
+.sp2-foodBox1,
+.sp2-foodBox2,
+.sp2-foodBox3,
+.sp2-foodBox4 {
+  width: 24%;
+  height: 100%;
+  margin: 0 auto;
+}
+.sp2-foodImg1,
+.sp2-foodImg2,
+.sp2-foodImg3,
+.sp2-foodImg4 {
+  width: 100%;
+  height: 50%;
+  background-color: rgb(90, 77, 97);
+  border-radius: 30px 30px 0 0;
+}
+.sp2-foodTit1,
+.sp2-foodTit2,
+.sp2-foodTit3,
+.sp2-foodTit4 {
+  margin-top: 0.5rem;
+  width: 100%;
+  height: 10%;
+  background-color: rgb(18, 43, 63);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 1.5rem;
+}
+.sp2-foodInf1,
+.sp2-foodInf2,
+.sp2-foodInf3,
+.sp2-foodInf4 {
+  margin-top: 0.5rem;
+  width: 100%;
+  height: 40%;
+  background-color: rgb(18, 43, 63);
+  display: flex;
+  align-items: center;
+  color: white;
+  font-size: 1.5rem;
+  text-align: start;
+  padding: 2rem;
+}
+
+/* 봄에 열리는 축제 */
+
+.sp2-section3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 600px;
+  padding: 4rem 6rem;
+  background-color: #0f172a;
+}
+
+.sp2-sec3-title {
+  text-align: center;
+  font-size: 2.6rem;
+  margin-bottom: 50px;
+  color: #fff;
+}
+
+.sp2-sec3-con {
+  display: flex;
+  width: 100%;
+  height: 60%;
+}
+
+/* sp2-sec3-con-img1 아래태크에 전체 이미지 URL 복붙 */
+.sp2-sec3-con-img1 {
+  position: relative;
+  width: 50%;
+  height: 100%;
+  margin-right: 10px;
+}
+
+.sp2-sec3-con-img1-opacity-con {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.sp2-sec3-con-img1-opacity-con-in-con {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 70%;
+  height: 70%;
+  font-size: 2rem;
+}
+
+.sp2-sec3-con-img1-opacity-con-in-con span {
+  display: block;
+  color: #fff;
+}
+
+.sp2-sec3-con-img1-opacity-con-in-con span:nth-child(1),
+.sp2-sec3-con-img1-opacity-con-in-con span:nth-child(4) {
+  font-size: 1.2rem;
+}
+
+.sp2-sec3-con-img1-opacity-con-in-con span:nth-child(2),
+.sp2-sec3-con-img1-opacity-con-in-con span:nth-child(3) {
+  font-size: 2.4rem;
+}
+
+.sp2-sec3-con-img1-opacity-con-in-con span:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.sp2-sec3-con-img2 {
+  position: relative;
+  width: 50%;
+  height: 100%;
+}
+
+/* 갤러리 */
+.sp3-section1 {
+  width: 100%;
+  height: 100%;
+  padding: 2rem 0;
+  text-align: center;
+  background: linear-gradient(to bottom, #141b33 0%, #ffffff 100%);
+  margin: 0;
+}
+
+/* 제목 */
+.sp3-subTit1 {
+  font-size: 2rem;
+  font-weight: 700;
+  color: white;
+}
+
+/* 본문 */
+.sp3-galBox1,
+.sp3-galBox2,
+.sp3-galBox3 {
+  width: 100%;
+  height: 25%;
+  margin: 7rem auto;
+  display: flex;
+}
+
+.sp3-galImgBox {
+  width: 20%;
+  height: 100%;
+  background-color: green;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+/* 모달 스타일 */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  position: relative;
+  width: 50%;
+  height: 60%;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 10px;
+}
+
+.modal-img {
+  margin-top: 10rem;
+  width: 80%;
+  height: 70%;
+  background-color: gray;
+}
+
+.modal-text {
+  margin-top: 5rem;
+  width: 80%;
+  height: 50%;
+  text-align: center;
+  font-size: 1.4rem;
+  color: #333333;
+  padding: 1rem;
+}
+
+#closeBtn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+/*  */
+/* pc */
+@media (min-width: 1025px) {
+}
+/* 태블릿 */
+@media (min-width: 769px) and (max-width: 1024px) {
+}
+
+/* 서브2 모바일 */
+@media (max-width: 768px) {
+  .sp1-sec3-top {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sp1-sec3-top > div {
+    width: 100%;
+  }
+
+  .sp1-sec3-top > div:nth-child(1) {
+    margin-bottom: 20px;
+  }
+  .sp1-sec3-api {
+    padding: 2rem 2rem 4rem 2rem;
+  }
+
+  .sp1-sec3-text {
+    text-align: start;
+    padding: 4rem 2rem;
+    line-height: 2.5rem;
+    margin-bottom: 3rem;
+  }
+
+  .sp2-foodTit1,
+  .sp2-foodTit2,
+  .sp2-foodTit3,
+  .sp2-foodTit4 {
+    font-size: 1.6rem;
+    height: 20%;
+  }
+
+  .sp2-sec3-con-img1-opacity-con-in-con span:nth-child(2),
+  .sp2-sec3-con-img1-opacity-con-in-con span:nth-child(3) {
+    font-size: 2rem !important;
+  }
+
+  .sp2-foodInf1,
+  .sp2-foodInf2,
+  .sp2-foodInf3,
+  .sp2-foodInf4 {
+    display: none;
+  }
+  .sp2-foodBox3,
+  .sp2-foodBox4 {
+    margin-top: 0 !important;
+  }
+  .sp2-section3 {
+    padding: 4rem 4rem;
+  }
+
+  .sp2-section2 {
+    height: 63% !important;
+  }
+
+  .sp2-mainBox2 {
+    margin: 5rem 2.3rem;
+  }
+
+  .mb-br {
+    display: none;
+  }
+
+  .sp2-section1 {
+    height: 100%;
+  }
+  .sp2-mainBox1 {
+    display: block;
+    width: 100%;
+    height: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+    margin: 0;
+    white-space: nowrap;
+    padding: 4rem;
+    /* border: 1px solid #fff; */
+  }
+
+  .sp2-mainBox1 > div {
+    display: inline-block;
+    width: 100%;
+    height: 500px;
+    /* border: 1px solid yellow; */
+  }
+
+  .sp2-mainBox1 > div:not(:last-child) {
+    margin-right: 50px;
+  }
+
+  .sp2-mainBox1 > div:nth-child(even) {
+    position: relative;
+    top: -288px;
+  }
+
+  .sp2-subTit1 {
+    margin-bottom: 45px;
+  }
+
+  .sp2-subImg1,
+  .sp2-subImg3 {
+    margin-bottom: 40px;
+  }
+
+  .sp2-subImg2,
+  .sp2-subImg4 {
+    margin-top: 40px;
+  }
+
+  .sp2-mainBox2 {
+    flex-wrap: wrap;
+  }
+
+  .sp2-foodBox1,
+  .sp2-foodBox2,
+  .sp2-foodBox3,
+  .sp2-foodBox4 {
+    width: 40%;
+    height: 40%;
+  }
+
+  .sp2-foodBox3,
+  .sp2-foodBox4 {
+    margin-top: 100px;
+  }
+
+  .sp2-section2 {
+    height: 100%;
+  }
+
+  .sp2-foodImg1,
+  .sp2-foodImg2,
+  .sp2-foodImg3,
+  .sp2-foodImg4 {
+    height: 80%;
+  }
+
+  .sp2-sec3-con {
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .sp2-sec3-con-img1 {
+    margin-bottom: 20px;
+  }
+
+  .sp2-sec3-con-img1,
+  .sp2-sec3-con-img2 {
+    width: 100%;
+  }
+
+  .sp2-sec3-con-img1-opacity-con-in-con {
+    width: 85%;
+    height: 85%;
+  }
+
+  .sp1-navMenu {
+    display: none;
+  }
+
+  /* 갤러리 */
+  .sp3-section1 {
+    width: 100%;
+    height: 100%;
+    padding: 2rem 0;
+    text-align: center;
+    background: linear-gradient(to bottom, #141b33 0%, #ffffff 100%);
+    margin: 0;
+  }
+
+  /* 제목 */
+  .sp3-subTit1 {
+    font-size: 2rem;
+    font-weight: 700;
+    color: white;
+  }
+
+  /* 본문 */
+  .sp3-galBox1,
+  .sp3-galBox2 {
+    width: 100%;
+    height: 25%;
+    margin: 1rem auto;
+    display: flex;
+  }
+  .sp3-galBox1 {
+    margin-top: 10rem;
+  }
+  .sp3-galImgBox {
+    width: 25%;
+    height: 70%;
+    background-color: green;
+    margin: 0 auto;
+    cursor: pointer;
+  }
+
+  .sp2-sec3-con-img1-opacity-con-in-con span:not(:last-child) {
+    margin-bottom: 0;
+  }
+
+  /* 모달 스타일 */
+  .modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modal-content {
+    position: relative;
+    width: 50%;
+    height: 60%;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 10px;
+  }
+
+  .modal-img {
+    margin-top: 10rem;
+    width: 80%;
+    height: 70%;
+    background-color: gray;
+  }
+
+  .modal-text {
+    margin-top: 5rem;
+    width: 80%;
+    height: 50%;
+    text-align: center;
+    font-size: 1.4rem;
+    color: #333333;
+    padding: 1rem;
+  }
+
+  #closeBtn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 2rem;
+    cursor: pointer;
+  }
+
+  .sp2-section2 {
+    width: 100%;
+    height: 70%;
+    padding: 2.5rem 0 !important;
+    text-align: center;
+    margin-top: 10%;
+  }
+}
