--- a/style/springSub.css
+++ b/style/springSub.css
@@ -326,6 +326,10 @@
   cursor: pointer;
 }
 
+.sp3-galImgBox>img{
+  width: 100%; height: 100%; object-fit: cover;
+}
+
 /* 모달 스타일 */
 .modal {
   display: none;
@@ -356,6 +360,7 @@
   width: 80%;
   height: 70%;
   background-color: gray;
+  background-position: center; background-repeat: no-repeat; background-size: cover;
 }
 
 .modal-text {
