--- a/style/season-sub.css
+++ b/style/season-sub.css
@@ -162,13 +162,11 @@
   justify-content: center;
   width: 100%;
   height: 600px;
-  border: 1px solid #000;
   padding: 4rem 6rem;
 }
 
 .sp2-sec3-title {
   text-align: center;
-  border: 1px solid black;
   font-size: 2.6rem;
   margin-bottom: 50px;
 }
@@ -177,7 +175,6 @@
   display: flex;
   width: 100%;
   height: 60%;
-  border: 1px solid #000;
 }
 
 /* sp2-sec3-con-img1 아래태크에 전체 이미지 URL 복붙 */
@@ -454,7 +451,7 @@
   .sp3-galBox2 {
     width: 100%;
     height: 25%;
-    margin: 1rem auto;
+    margin: 2rem auto;
     display: flex;
   }
   .sp3-galBox1 {
@@ -484,7 +481,7 @@
   .modal-content {
     position: relative;
     width: 50%;
-    height: 60%;
+    height: 40%;
     background: white;
     display: flex;
     justify-content: center;
@@ -496,7 +493,8 @@
   .modal-img {
     margin-top: 10rem;
     width: 80%;
-    height: 70%;
+    height: 40%;
+    background-position: center;
     background-color: gray;
   }
 
@@ -505,7 +503,7 @@
     width: 80%;
     height: 50%;
     text-align: center;
-    font-size: 1.4rem;
+    font-size: 0.9rem;
     color: #333333;
     padding: 1rem;
   }
