--- a/style/main.css
+++ b/style/main.css
@@ -181,6 +181,16 @@ header {
   text-shadow: 0px 0px 5px black;
 }
 
+.jm-mainImg-content-typing {
+  position: absolute;
+  width: 700px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Rosarivo";
+  font-size: 5.5rem !important;
+}
+
 /* 메인 버튼 */
 .jm-mainPrevBtn,
 .jm-mainNextBtn {
@@ -255,8 +265,38 @@ header {
 .hi-section {
   width: 100vw;
   height: 90vh;
-  position: relative;
 }
+
+.hi-section.on {
+  width: 100vw;
+  height: 90vh;
+}
+
+#event-festival {
+  position: relative;
+  opacity: 0;
+  left: -1000px;
+  transition: 3s;
+}
+
+#event-festival.on {
+  position: relative;
+  opacity: 1;
+  left: 0px;
+}
+
+#season-ani {
+  position: relative;
+  transition: 3s;
+  opacity: 0;
+  top: 150px;
+}
+
+#season-ani.on {
+  top: 0px;
+  opacity: 1;
+}
+
 .hi-subTit {
   width: 100%;
   height: 10rem;
@@ -1036,6 +1076,22 @@ footer > span {
   transform: rotate(30deg);
 }
 
+/* 애니메이션 예시*/
+/* @keyframes textMove {
+  from {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+} */
+
+/* animation: textMove 3s both; */
+
+/* 애니메이션 */
+
 /* pc */
 @media (min-width: 1025px) {
 }
@@ -1373,6 +1429,7 @@ footer > span {
   .hi-section:nth-child(2) {
     height: 100vh;
   }
+
   .hi-seasonT {
     width: 80%;
     height: 70%;
@@ -1591,4 +1648,24 @@ footer > span {
     display: none;
     margin-bottom: 5rem;
   }
+
+  /* 모바일에서는 타이핑 숨기기 */
+  .jm-mainImg-content-typing {
+    display: none;
+  }
+
+  #season-ani {
+    top: 0;
+    opacity: 1;
+    transition: none;
+  }
+
+  #event-festival {
+    position: relative;
+    opacity: 1;
+    left: 0;
+    transition: none;
+  }
+
+  /* 모바일 애니메이션 */
 }
