--- a/style/main.css
+++ b/style/main.css
@@ -189,6 +189,7 @@ header {
   transform: translate(-50%, -50%);
   font-family: "Rosarivo";
   font-size: 5.5rem !important;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
 }
 
 /* 메인 버튼 */
