--- a/style/summer.css
+++ b/style/summer.css
@@ -782,6 +782,7 @@ footer > span {
 /* 모바일 */
 @media (max-width: 768px) {
   body {
+    position: relative;
     max-width: 100vw !important;
     min-height: 100vh;
     overflow-x: hidden;
@@ -1346,7 +1347,6 @@ footer > span {
 /* 갤러리 */
 .sp3-section1 {
   width: 100%;
-  height: 100%;
   padding: 2rem 0;
   text-align: center;
   background: linear-gradient(to bottom, #141b33 0%, #ffffff 100%);
@@ -1476,6 +1476,54 @@ footer > span {
   font-size: 2rem;
   cursor: pointer;
 }
+
+/*------------- 2행 2열------------ */
+
+.sp3-subTit1 {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 2.6rem !important;
+  margin-top: 50px;
+}
+
+.sp3-section1 {
+  position: relative;
+  display: flex;
+  justify-content: center !important;
+  height: auto !important;
+  padding: 15rem 20rem 0 20rem !important;
+}
+.sp3-galBox1 {
+  display: flex;
+  flex-direction: column;
+  height: 100% !important;
+  margin: 0 !important;
+  margin-right: 100px !important;
+}
+
+.sp3-galBox1 > div {
+  width: 500px !important;
+  height: 320px !important;
+  margin-bottom: 100px;
+}
+
+.sp3-galBox2 {
+  display: flex;
+  flex-direction: column;
+  height: 100% !important;
+  margin-top: 100px !important;
+  margin: 0 !important;
+}
+
+.sp3-galBox2 > div {
+  width: 500px !important;
+  height: 320px !important;
+  margin-bottom: 100px;
+}
+
+/* -----------2행 2열 ------------ */
 
 /*  */
 /* pc */
@@ -1648,7 +1696,6 @@ footer > span {
   /* 갤러리 */
   .sp3-section1 {
     width: 100%;
-    height: 100%;
     padding: 2rem 0;
     text-align: center;
     background: linear-gradient(to bottom, #141b33 0%, #ffffff 100%);
@@ -1742,4 +1789,47 @@ footer > span {
     text-align: center;
     margin-top: 10%;
   }
+
+  /* 모바일 갤러리페이지 수정 ----------------- */
+
+  .sp3-subTit1 {
+    margin-top: 30px !important;
+    position: relative !important;
+  }
+
+  .sp3-section1 {
+    display: block !important;
+    padding: 2rem !important;
+    height: auto !important;
+  }
+
+  .sp3-galBox1 {
+    flex-direction: column;
+    width: 100% !important;
+    height: 100% !important;
+    margin-top: 32px !important;
+    margin-bottom: 0 !important;
+    margin-right: 0 !important;
+  }
+
+  .sp3-galBox2 {
+    flex-direction: column;
+    width: 100% !important;
+    height: 100% !important;
+    margin: 0 !important;
+  }
+
+  .sp3-galBox1 > div {
+    width: 80% !important;
+    height: 200px !important;
+    margin-bottom: 30px !important;
+  }
+
+  .sp3-galBox2 > div {
+    width: 80% !important;
+    height: 200px !important;
+    margin-bottom: 30px !important;
+  }
+
+  /* -------------------- */
 }
